--- a/globetrotting/apps/blog/templates/blog/home.html
+++ b/globetrotting/apps/blog/templates/blog/home.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block title %} Home {% endblock %}
 
 {% block content %}
     <h1> Welcome! </h1>
+
 {% endblock %}
 
