--- a/globetrotting/apps/blog/templates/blog/home.html
+++ b/globetrotting/apps/blog/templates/blog/home.html
@@ -5,6 +5,12 @@
 
 {% block content %}
     <h1> Welcome! </h1>
-
+    {% for post in posts %}
+    <div class="post">
+        <h2><a href="{{post.id}}">{{post.title}}</a></h2>
+        <p>{{post.description}}</p>
+        <p>Posted on {{post.created}}</p>
+    </div>
+    {% endfor %}
 {% endblock %}
 
