--- a/globetrotting/static/css/blog.css
+++ b/globetrotting/static/css/blog.css
@@ -1,17 +1,17 @@
-html {
-  background: url('/globetrotting/static/images/midnight.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
 body {
-    max-width: 65%;
+    background: url('../images/bg1.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    max-width: 1000px;
     margin: 0 auto;
+    color:#dcdcdc;
    }
 
-.container-fluid{margin-top: 5em}
+.post{
+    margin: 0 auto;
+}
 
 
 
