--- a/globetrotting/templates/base.html
+++ b/globetrotting/templates/base.html
@@ -18,6 +18,7 @@
 
 </head>
 <body>
+  <div class="row">
 
     <!-- Carousel
     ================================================== -->
@@ -62,33 +63,58 @@
       </div>
       <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
       <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-    </div><!-- /.carousel -->
     </div>
+    <!-- /.carousel -->
 
 
     <div class="navbar navbar-inverse" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{% url 'blog:home' %}">Globetrotting</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="{% url 'blog:archive' %}">Archive</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'blog:home' %}">Globetrotting</a>
         </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="{% url 'blog:archive' %}">Archive</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
         </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col-md-8">
+      {% block content %}{% endblock %}
+    </div>
+
+    <div class="col-md-4">
+      <ul>
+          Something:
+        <li>asdasdasdasd</li>
+        <li>asd</li>
+        <li>asdasd</li>
+        <li>as</li>
+        <li>d</li>
+         <hr>
+          Something other:
+        <li>a</li>
+        <li>d</li>
+        <li>asd</li>
+        <li>as</li>
+        <li>dasd</li>
+      </ul>
+    </div>
+  </div>
 
 
-    {% block content %}{% endblock %}
 
 </body>
 </html>
