--- a/globetrotting/apps/blog/templates/blog/archive.html
+++ b/globetrotting/apps/blog/templates/blog/archive.html
@@ -6,7 +6,7 @@
     <h1> My Blog Archive </h1>
     {% for post in posts %}
     <div class="post">
-        <h2><a href="{{post.id}}">{{post.title}}</a></h2>
+        <h2><a href="{% url 'blog:detail' post.id %}">{{post.title}}</a></h2>
         <p>{{post.description}}</p>
         <p>Posted on {{post.created}}</p>
     </div>
