--- a/globetrotting/apps/blog/templates/blog/home.html
+++ b/globetrotting/apps/blog/templates/blog/home.html
@@ -7,9 +7,12 @@
     <h1> Welcome! </h1>
     {% for post in posts %}
     <div class="post">
-        <h2><a href="{% url 'blog:detail' post.id %}">{{post.title}}</a></h2>
+        <h2><a href="{% url 'blog:detail' post.id %}">
+            {{post.title}}<br/>
+            <img src="{{ post.photo_set.all.1.image.url }}" width="200">
+        </a></h2>
         <p>{{post.description}}</p>
-        <p>Posted on {{post.created}}</p>
+        <p>Posted {{post.created}}</p>
     </div>
     {% endfor %}
 {% endblock %}
