--- a/globetrotting/templates/base.html
+++ b/globetrotting/templates/base.html
@@ -12,9 +12,12 @@
 
     <title>{% block title %}{% endblock %}</title>
 
-
     <link href="{% static 'dist/css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/blog.css' %}" rel="stylesheet">
+
+    {# image gallery#}
+
+    <link rel="stylesheet" href="{% static 'dist/css/blueimp-gallery.min.css' %}">
 
 </head>
 <body>
@@ -66,7 +69,7 @@
     </div>
     <!-- /.carousel -->
 
-
+    {#    navigation panel#}
     <div class="navbar navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -123,3 +126,5 @@
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="{% static "dist/js/bootstrap.min.js" %}"></script>
+
+<script src="{% static 'dist/js/blueimp-gallery.min.js' %}"></script>
