--- a/globetrotting/apps/blog/templates/blog/archive.html
+++ b/globetrotting/apps/blog/templates/blog/archive.html
@@ -5,14 +5,26 @@
 {% block content %}
     <h1> My Blog Archive </h1>
     {% for post in posts %}
-    <div class="post">
-        <h2><a href="{% url 'blog:detail' post.id %}" >
-            {{post.title}}<br/>
+{#    <div class="post">#}
+{#        <h2><a href="{% url 'blog:detail' post.id %}" >#}
+{#            {{post.title}}<br/>#}
+{#            <img src="{{ post.photo_set.all.0.image.url }}" width="200">#}
+{#        </a></h2>#}
+{#        <p>{{post.description}}</p>#}
+{#        <p>Posted on {{post.created}}</p>#}
+{#    </div>#}
+      <div class="row">
+        <div class="col-md-5">
             <img src="{{ post.photo_set.all.0.image.url }}" width="200">
-        </a></h2>
-        <p>{{post.description}}</p>
-        <p>Posted on {{post.created}}</p>
-    </div>
+        </div>
+        <div class="col-md-7">
+            <h3>{{ post.title }}</h3>
+            <p>{{ post.description }}</p>
+             <a href="{% url 'blog:detail' post.id %}">Read more...</a>
+            <p>Posted {{ post.created }}</p>
+        </div>
+      </div>
+
     {% endfor %}
 {% endblock %}
 
