--- a/globetrotting/apps/blog/templates/blog/home.html
+++ b/globetrotting/apps/blog/templates/blog/home.html
@@ -4,18 +4,24 @@
 {% block title %} Home {% endblock %}
 
 {% block content %}
-    <h1> Welcome! </h1>
+{#    <h1> Welcome! </h1>#}
+
     {% for post in posts %}
     <div class="post">
-        <h2>
-            <a href="{% url 'blog:detail' post.id %}">
-                {{post.title}}<br/>
-                <img src="{{ post.photo_set.all.0.image.url }}" width="200">
-            </a>
-        </h2>
-        <p>{{post.description}}</p>
-        <p>Posted {{post.created}}</p>
+      <div class="row">
+        <div class="col-md-5">
+            <img src="{{ post.photo_set.all.0.image.url }}" width="200">
+        </div>
+        <div class="col-md-7">
+            <h3>{{ post.title }}</h3>
+            <p>{{ post.description }}</p>
+            <br/>
+            <a href="{% url 'blog:detail' post.id %}">Read more...</a>
+            <br/>
+            <p>Posted {{ post.created }}</p>
+        </div>
+      </div>
     </div>
     {% endfor %}
-{% endblock %}
 
+{% endblock %}
