--- a/globetrotting/apps/blog/templates/blog/post_detail.html
+++ b/globetrotting/apps/blog/templates/blog/post_detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
-<div id="blueimp-gallery" class="blueimp-gallery">
+<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
     <!-- The container for the modal slides -->
     <div class="slides"></div>
     <!-- Controls for the borderless lightbox -->
@@ -42,7 +42,6 @@
 
 <header>
     <h1> {{post.title}} </h1>
-    <p> Posted on {{post.created}}</p>
     <p class="description"> {{post.description}}</p>
     {{ post.content|safe }}
     <br/>
@@ -50,13 +49,13 @@
 
 <div id="links">
     {% for photo in post_photos %}
-
         <a href="{{ photo.image.url }}" title={{ photo.title }} data-gallery>
             <img src="{{ photo.thumb_url }}" alt="">
         </a>
-
     {% endfor %}
 </div>
+
+<p> Posted on {{post.created}}</p>
 
 <script>
 document.getElementById('links').onclick = function (event) {
@@ -68,5 +67,6 @@ document.getElementById('links').onclick = function (event) {
     blueimp.Gallery(links, options);
 };
 </script>
+
 {% endblock %}
 
