--- a/globetrotting/templates/base.html
+++ b/globetrotting/templates/base.html
@@ -14,10 +14,7 @@
 
     <link href="{% static 'dist/css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/blog.css' %}" rel="stylesheet">
-
-    {# image gallery#}
-
-    <link rel="stylesheet" href="{% static 'dist/css/blueimp-gallery.min.css' %}">
+    <link href="{% static 'dist/css/blueimp-gallery.min.css' %}" rel="stylesheet" >
 
 </head>
 <body>
@@ -106,8 +103,8 @@
         <li>asdasd</li>
         <li>as</li>
         <li>d</li>
-         <hr>
-          Something other:
+        <hr>
+          Something else:
         <li>a</li>
         <li>d</li>
         <li>asd</li>
@@ -124,7 +121,7 @@
 
 <!-- Bootstrap core JavaScript
 <!-- Placed at the end of the document so the pages load faster -->
+
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="{% static "dist/js/bootstrap.min.js" %}"></script>
-
 <script src="{% static 'dist/js/blueimp-gallery.min.js' %}"></script>
