--- a/globetrotting/apps/blog/templates/blog/archive.html
+++ b/globetrotting/apps/blog/templates/blog/archive.html
@@ -12,8 +12,10 @@
           <div class="col-md-7">
             <h3>{{ post.title }}</h3>
             <p>{{ post.description }}</p>
-            <a href="{% url 'blog:detail' post.id %}">Read more...</a>
-            <p>Posted {{ post.created }}</p>
+            <br/>
+            <a href="{% url 'blog:detail' post.id %}">Подробнее >></a>
+            <br/>
+            <p>Опубликовано {{ post.created|date:"SHORT_DATE_FORMAT" }}</p>
           </div>
         </div>
         <hr>
