--- a/globetrotting/apps/blog/templates/blog/home.html
+++ b/globetrotting/apps/blog/templates/blog/home.html
@@ -10,7 +10,7 @@
 <div class="post">
   <div class="row">
     <div class="col-md-5">
-        <img src="{{ post.photo_set.all.0.image.url }}" width="200">
+        <img src="{{ post.photo_set.all.0.image.url }}" width="200" height="150">
     </div>
     <div class="col-md-7">
         <h3>{{ post.title }}</h3>
