add links to external resources

--- a/globetrotting/templates/base.html
+++ b/globetrotting/templates/base.html
@@ -98,18 +98,22 @@
     <div class="col-md-4">
       <ul>
           Something:
-        <li>asdasdasdasd</li>
+
         <li>asd</li>
         <li>asdasd</li>
         <li>as</li>
         <li>d</li>
         <hr>
-          Something else:
-        <li>a</li>
-        <li>d</li>
-        <li>asd</li>
-        <li>as</li>
-        <li>dasd</li>
+        <h4>Интересные ссылки:</h4>
+        <center>
+          <a href="http://moto.kiev.ua/forum/title/"><img src="{% static "images/moto_kiev_ua.gif" %}" width="80"></a>
+          <a href="http://moto-help.livejournal.com/"><img src="{% static "images/motohelp.png" %}" width="80"></a><br/><br/>
+          <a href="http://motosvit.com/"><img src="{% static "images/motosvit.jpg" %}"  width="80" height="65"></a>
+          <a href="http://bikepost.ru/"><img src="{% static "images/bikepost.jpg" %}" width="80" height="65"></a><br/><br/>
+          <a href="http://www.motosale.com.ua/"><img src="{% static "images/motosale.jpg" %}" height="70"></a><br/><br/>
+          <a href="http://www.motobike.ua/"><img src="{% static "images/motobike.gif" %}" width="245"></a><br/><br/>
+
+        </center>
       </ul>
     </div>
   </div>
