--- a/globetrotting/static/css/blog.css
+++ b/globetrotting/static/css/blog.css
@@ -1,12 +1,16 @@
+head{
+    max-width: 900px;
+}
+
 body {
-    background: url('../images/bg.jpg') no-repeat center center fixed;
+    /*background: url('../images/bg.jpg') no-repeat center center fixed;*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     max-width: 900px;
     margin: 0 auto;
-    color:#dcdcdc;
+    /*color:#dcdcdc;*/
    }
 
 .post{
