--- a/globetrotting/apps/blog/templates/blog/archive.html
+++ b/globetrotting/apps/blog/templates/blog/archive.html
@@ -1,21 +1,22 @@
 {% extends 'base.html' %}
 
-{% block title %} Blog Archive {% endblock %}
+{% block title %} Archive {% endblock %}
 
 {% block content %}
-    <h1> My Blog Archive </h1>
     {% for post in posts %}
         <div class="row">
-          <div class="col-md-5">
-            <img src="{{ post.photo_set.all.0.image.url }}" width="200" height="150">
-          </div>
-          <div class="col-md-7">
-            <h3>{{ post.title }}</h3>
-            <p>{{ post.description }}</p>
-            <br/>
-            <a href="{% url 'blog:detail' post.id %}">Подробнее >></a>
-            <br/>
-            <p>Опубликовано {{ post.created|date:"SHORT_DATE_FORMAT" }}</p>
+            <div class="col-md-4">
+                <img src="{{ post.photo_set.all.0.image.url }}" width="200" height="150">
+            </div>
+            <div class="col-md-8">
+                <h3>{{ post.title }}</h3>
+                <p>{{ post.description }}</p>
+                <br/>
+                <a href="{% url 'blog:detail' post.id %}">
+                    Подробнее <span class="glyphicon glyphicon-share-alt"></span>
+                </a>
+                <br/>
+                <p>Опубликовано {{ post.created|date:"SHORT_DATE_FORMAT" }}</p>
           </div>
         </div>
         <hr>
