--- a/globetrotting/static/css/blog.css
+++ b/globetrotting/static/css/blog.css
@@ -3,20 +3,23 @@ head{
 }
 
 body {
-    /*background: url('../images/bg.jpg') no-repeat center center fixed;*/
+    background: url('../images/bg.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    max-width: 900px;
+    max-width: 850px;
     margin: 0 auto;
     /*color:#dcdcdc;*/
    }
 
-.post{
-    margin: 0 auto;
-    /*vertical-align: top;*/
+.posts{
+  background-color: #22252a;
 }
+.links{
+  background-color: #393e43;
+}
+
 
 
 
